--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mantine/core": "^3.6.7",
+    "@mantine/dates": "^3.6.7",
+    "@mantine/hooks": "^3.6.7",
+    "@mantine/next": "^3.6.7",
+    "@mantine/notifications": "^3.6.7",
     "@prisma/client": "3.9.2",
+    "dayjs": "^1.10.7",
     "next": "^12.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
