--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "next": "^12.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
     "prisma": "3.9.2"
   },
   "prisma": {
