--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "next": "^12.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
-    "prisma": "3.9.2",
-    "sass": "^1.49.7"
+    "@types/react": "^17.0.39",
+    "prisma": "3.9.2"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
