github try 16 failed

--- a/.env
+++ b/.env
@@ -9,4 +9,10 @@ SMTP_FROM=doctordeath0601@gmail.com
 
 GITHUB_SECRET=6b0d77d8ae02a5afa6d0afba28e254976b01b8f5
 GITHUB_ID=02154a8f37f1f53e0b4d
-DATABASE_URL=postgresql://postgres:123@localhost:5432/developeer
+
+
+DATABASE_URL=postgresql://postgres:123@localhost:5432/developeer?schema=public
+DATABASE_USERNAME = postgres
+DATABASE_PASSWORD = 123
+DATABASE_HOST = localhost
+DATABASE_DB = developeer
