--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.10.7",
     "next": "^12.0.0",
     "next-auth": "^4.2.1",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
