email login working, github login not working

--- a/.env
+++ b/.env
@@ -5,11 +5,15 @@ SMTP_PORT=587
 SMTP_USER=doctordeath0601@gmail.com
 SMTP_PASSWORD=sfoknawcxigyompv
 SMTP_FROM=doctordeath0601@gmail.com
-
+EMAIL_SERVER=smtp://doctordeath0601@gmail.com:sfoknawcxigyompv@smtp.gmail.com.com:587
+EMAIL_FROM=doctordeath0601@gmail.com
 
 GITHUB_SECRET=6b0d77d8ae02a5afa6d0afba28e254976b01b8f5
 GITHUB_ID=02154a8f37f1f53e0b4d
 
+GOOGLE_CLIENT_ID_ = 313602156102-tb9r5agtgg6sidk7ndvkvgksbs2ma0nd.apps.googleusercontent.com
+GOOGLE_CLIENT_ID = 106177088793713559973
+GOOGLE_CLIENT_SECRET = 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
 
 DATABASE_URL=postgresql://postgres:123@localhost:5432/developeer?schema=public
 DATABASE_USERNAME = postgres
