--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = postgresql://postgres:password@localhost:5432/developeer?schema=public
+DATABASE_URL = postgresql://postgres:enter@localhost:5432/developeer?schema=public
 NEXTAUTH_URL = http://localhost:3000
 NEXTAUTH_SECRET = developeer-env-secret
 GITHUB_SECRET = aa7a4621c9bba979beb10eaac75bf3c91d8f786e
