--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start" ,
+    "migrate" : "prisma migrate dev && prisma generate"
   },
   "dependencies": {
     "@mantine/core": "^3.6.7",
@@ -17,9 +18,11 @@
     "@mantine/hooks": "^3.6.7",
     "@mantine/next": "^3.6.7",
     "@mantine/notifications": "^3.6.7",
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
     "dayjs": "^1.10.7",
     "next": "^12.0.0",
+    "next-auth": "^4.2.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
@@ -30,6 +33,6 @@
     "prisma": "3.9.2"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+   
   }
 }
