Email auth enabled --both auth sys working

--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ NEXTAUTH_URL = http://localhost:3000
 NEXTAUTH_SECRET = developeer-env-secret
 GITHUB_SECRET = aa7a4621c9bba979beb10eaac75bf3c91d8f786e
 GITHUB_ID = Iv1.57eaff886a5ef2d5
+SMTP_HOST=smtp.gmail.com 
+SMTP_PORT=587 
+SMTP_USER=doctordeath0601@gmail.com 
+SMTP_PASSWORD=sfoknawcxigyompv 
+SMTP_FROM=doctordeath0601@gmail.com 
+EMAIL_SERVER=smtp://doctordeath0601@gmail.com:sfoknawcxigyompv@smtp.gmail.com.com:587 
+EMAIL_FROM=doctordeath0601@gmail.com
