--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start" ,
-    "migrate" : "prisma migrate dev && prisma generate"
+    "start": "next start",
+    "migrate": "prisma migrate dev && prisma generate"
   },
   "dependencies": {
     "@mantine/core": "^3.6.7",
@@ -23,6 +23,7 @@
     "dayjs": "^1.10.7",
     "next": "^12.0.0",
     "next-auth": "^4.2.1",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
@@ -32,7 +33,5 @@
     "@types/react": "^17.0.39",
     "prisma": "3.9.2"
   },
-  "prisma": {
-   
-  }
+  "prisma": {}
 }
