--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
     "dayjs": "^1.10.7",
+    "express": "^4.17.3",
     "next": "^12.0.0",
     "next-auth": "^4.2.1",
     "nodemailer": "^6.7.2",
+    "pg": "^8.7.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
