--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "three": "^0.138.2",
+    "vanta": "^0.5.21"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
