--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
