--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mantine/notifications": "^3.6.7",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
+    "@react-spring/parallax": "^9.4.3",
     "dayjs": "^1.10.7",
     "next": "^12.0.0",
     "next-auth": "^4.2.1",
