--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
+    "react-reveal": "^1.2.2",
     "sass": "^1.49.7",
     "three": "^0.138.2",
     "vanta": "^0.5.21"
