--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "prisma migrate dev && prisma generate"
   },
   "dependencies": {
     "@mantine/core": "^3.6.7",
@@ -17,17 +18,33 @@
     "@mantine/hooks": "^3.6.7",
     "@mantine/next": "^3.6.7",
     "@mantine/notifications": "^3.6.7",
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
+    "@react-spring/parallax": "^9.4.3",
+    "bootstrap": "^5.1.3",
+    "cache": "^2.3.1",
+    "clear": "^0.1.0",
     "dayjs": "^1.10.7",
+    "express": "^4.17.3",
+    "jquery": "^3.6.0",
     "next": "^12.0.0",
+    "next-auth": "^4.2.1",
+    "nodemailer": "^6.7.2",
+    "npm": "^8.6.0",
+    "pg": "^8.7.3",
+    "popper.js": "^1.16.1",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.0",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "react-reveal": "^1.2.2",
+    "sass": "^1.49.7",
+    "three": "^0.138.2",
+    "vanta": "^0.5.21"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
     "prisma": "3.9.2"
   },
-  "prisma": {
-    "seed": "node prisma/seed.js"
-  }
+  "prisma": {}
 }
