--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mantine/core": "^3.6.7",
     "@mantine/dates": "^3.6.7",
+    "@mantine/form": "^4.1.2",
     "@mantine/hooks": "^3.6.7",
     "@mantine/next": "^3.6.7",
     "@mantine/notifications": "^3.6.7",
@@ -32,8 +33,10 @@
     "react-markdown": "^8.0.0",
     "react-reveal": "^1.2.2",
     "sass": "^1.49.7",
+    "tabler-icons-react": "^1.44.0",
     "three": "^0.138.2",
-    "vanta": "^0.5.21"
+    "vanta": "^0.5.21",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
