--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
     "@react-spring/parallax": "^9.4.3",
+    "axios": "^0.26.1",
     "dayjs": "^1.10.7",
     "express": "^4.17.3",
     "next": "^12.0.0",
