--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mantine/core": "^3.6.7",
     "@mantine/dates": "^3.6.7",
+    "@mantine/dropzone": "^4.1.3",
     "@mantine/form": "^4.1.2",
     "@mantine/hooks": "^3.6.7",
     "@mantine/next": "^3.6.7",
