--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-DATABASE_URL = postgresql://postgres:password@localhost:5432/developeer?schema=public
-NEXTAUTH_URL = http://localhost:3000
-NEXTAUTH_SECRET = developeer-env-secret
-GITHUB_SECRET = aa7a4621c9bba979beb10eaac75bf3c91d8f786e
-GITHUB_ID = Iv1.57eaff886a5ef2d5
+DATABASE_URL=
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
+GITHUB_SECRET=
+GITHUB_ID= 
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+EMAIL_SERVER= 
+EMAIL_FROM=
