messaging feature done

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ SMTP_PASSWORD=sfoknawcxigyompv
 SMTP_FROM=doctordeath0601@gmail.com 
 EMAIL_SERVER=smtp://doctordeath0601@gmail.com:sfoknawcxigyompv@smtp.gmail.com.com:587 
 EMAIL_FROM=doctordeath0601@gmail.com
+ABLY_API_KEY=skzLLg.P1MMFw:UZahXhWl8phXAYtnvak73D4YIn9C5TA1epPz8cJBEXA
