--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
     "@react-spring/parallax": "^9.4.3",
+    "ably": "1.2.5-beta.1",
     "axios": "^0.26.1",
     "dayjs": "^1.10.7",
     "express": "^4.17.3",
