--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "3.9.2",
     "@react-spring/parallax": "^9.4.3",
+    "ably": "1.2.5-beta.1",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
     "express": "^4.17.3",
     "next": "^12.0.0",
@@ -31,6 +33,7 @@
     "nodemailer": "^6.7.2",
     "pg": "^8.7.3",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.0",
     "react-markdown": "^8.0.0",
     "react-reveal": "^1.2.2",
